feat: Se elimina la columna uid de tabla de usuarios
